# Rise-Agent

./: .gitignore  README.md  vercel.json
backend/: .env.example  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  dependencies.py  websocket_manager.py
backend/app/db/: session.py
backend/app/models/: __init__.py  call.py  conversation.py  lead.py  memory.py  scoring.py
backend/app/repositories/: call_repository.py  lead_repository.py
backend/app/routes/: __init__.py  call.py  lead.py  webhook.py
backend/app/schemas/: __init__.py  call.py  conversation.py  dashboard.py  lead.py  scoring.py
backend/app/services/: call_service.py  conversation_engine.py  conversation_service.py  handoff.py  intent_classifier.py  lead_service.py  llm_service.py  memory_service.py  orchestrator.py  persona.py  scoring.py  scoring_service.py  scoring_service_v2.py  strategy_engine.py  stt_service.py  tts_service.py  voice_service.py  whatsapp_service.py  (+1 more)
backend/data/: base_script.md  faq.md
backend/demo/: personas.json  simulator.py
backend/knowledge/: ap_script.txt  loader.py  objections_faq.txt
backend/models/: call.py  lead.py  score.py
backend/prompts/: system_prompt.py
backend/routers/: calls.py  dashboard.py  leads.py  webhooks.py
backend/services/: call_service.py  conversation.py  language.py  llm.py  memory.py  objection_handler.py  rm_handoff.py  sarvam.py  scoring.py  whatsapp.py
backend/tests/: test_scoring.py
(+79 files in other folders)
